# pigeon

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.beads/: issues.jsonl  metadata.json
config/: config.example.yaml
config/systemd/: pigeon-restart.service  pigeon-restart.timer  pigeon.env.example  pigeon.service
dev_notes/: .gitignore
dev_notes/changes/: 2026-02-01_19-27-26_bootstrap-and-documentation-complete.md  2026-02-20_phase-10-gdrive-integration.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  architecture.md  definition-of-done.md  implementation-reference.md  templates.md  workflows.md
scripts/: run-poller.sh
src/pigeon/: __init__.py  config.py  drive_client.py  main.py  poller.py
src/pigeon/processors/: __init__.py  base.py  pipeline.py  professionalize.py  routing.py  stt.py
src/pigeon/routing/: __init__.py  bead_creator.py  router.py  submodules.py
src/pigeon/sources/: __init__.py  base.py  gdrive.py  slack.py
tests/: conftest.py  test_gdrive.py  test_integration.py  test_processors.py  test_routing.py  test_routing_processor.py  test_slack.py
